Revise README for environment and installation updates
Updated README to reflect changes in environment support, installation instructions, and development notes.